--- a/Fairy/index.html
+++ b/Fairy/index.html
@@ -21,7 +21,7 @@
             <div class="layers">
                 <div class="layers__header">
                 <div class="layers__caption">Welcome to Parallax</div>
-                <div class="layers__title">Timr Shop</div>
+                <div class="layers__title">Fairy Forest</div>
                 </div>
                 <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
                 <div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
